Fixed the header alignment

--- a/src/main/java/org/redhatchallenge/rhc2013/resources/css/main.css
+++ b/src/main/java/org/redhatchallenge/rhc2013/resources/css/main.css
@@ -558,7 +558,7 @@
         text-shadow: 1px 1px 0 #000000;
         font-weight: bold;
         text-decoration: none;
-        padding: 11px 8px 0px 0px;
+        padding: 11px 8px 2px 0px;
         width: inherit;
         font-weight: bold;
         position: relative;
